# hypervisor

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: utils.cmake
src/: CMakeLists.txt  logging.h  logging.hpp  main.cpp  new.cpp  new.hpp  std_include.hpp  thread.cpp
src/driver/: CMakeLists.txt  allocator.hpp  assembly.asm  assembly.hpp  assembly2.asm  driver_main.cpp  ept.cpp  ept.hpp  exception.hpp  finally.hpp  functional.hpp  globals.cpp  globals.hpp  hypervisor.cpp  hypervisor.hpp  irp.cpp  irp.hpp  list.hpp  logging.hpp  main.cpp  memory.cpp  memory.hpp  new.cpp  new.hpp  nt_ext.hpp  process.cpp  process.hpp  process_callback.cpp  process_callback.hpp  resource.rc  sleep_callback.cpp  sleep_callback.hpp  std_include.hpp  stdint.hpp  string.cpp  string.hpp  thread.cpp  thread.hpp  type_traits.hpp  unique_ptr.hpp  (+2 more)
src/driver_file/: CMakeLists.txt
src/include/: hyperhook.h
src/runner/: CMakeLists.txt  driver.hpp  driver_device.cpp  driver_device.hpp  finally.hpp  main.cpp  native_handle.cpp  native_handle.hpp  process.cpp  process.hpp  resource.hpp  resource.rc  service_handle.cpp  service_handle.hpp  std_include.hpp
src/runner/launcher/: launcher.cpp  launcher.hpp  window.cpp
src/runner/launcher/html/: doc_host_ui_handler.cpp  html_argument.cpp  html_dispatch.cpp  html_frame.cpp  html_window.cpp  ole_client_site.cpp  ole_in_place_frame.cpp  ole_in_place_site.cpp
src/runner/resources/: main.html
src/runner/utils/: nt.hpp
src/shared/: CMakeLists.txt  irp_data.hpp
